--- a/plantillas/base.html
+++ b/plantillas/base.html
@@ -23,8 +23,10 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
-                <a class="navbar-brand" href="{% url 'lista_cursos' %}">Cursos</a>
-                <a class="navbar-brand" href="{% url 'lista_estudiantes' %}">Estudiantes</a>
+                <a class="navbar-brand" href="{% url 'curso_formulario' %}">Cursos</a>
+                <a class="navbar-brand" href="{% url 'estudiante_formulario' %}">Estudiantes</a>
+                <a class="navbar-brand" href="{% url 'profesor_formulario' %}">Profesor</a>
+                <a class="navbar-brand" href="{% url 'entregable_formulario' %}">Entregable</a>
                 <a class="btn btn-primary" href="#signup">Sign Up</a>
             </div>
         </nav>
