--- a/plantillas/inicio.html
+++ b/plantillas/inicio.html
@@ -6,4 +6,26 @@ Inicio
 
 {% block contenido %}
 <h1>Bienvenidos a Coderhouse</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulario - Busqueda comision</title>
+</head>
+<body>
+    <h2>Busqueda comision</h2>
+
+    <form action="{% url 'buscar' %}" method="GET">
+
+        <input type="number" name="comision" id="comision"> 
+
+        <input type="submit" value="Enviar">
+        
+    </form>   
+</body>
+</html>
 {% endblock contenido %}
+
