--- a/plantillas/base.html
+++ b/plantillas/base.html
@@ -29,7 +29,25 @@
                 <a class="navbar-brand" href="{% url 'entregable_formulario' %}">Entregable</a>
                 <!--Se le agrega codigo python ya que depende el estado que aparece-->
                 {% if user.is_authenticated %}
-                <a class="btn btn-warning" href="{% url 'logout' %}">Cierre sesión</a>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div style="display: inline-flex;">
+                    <span>{{ user.username }}</span>
+                    </div>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li>
+                    <a class="dropdown-item" href="{% url 'editar_perfil' %}">Editar mis datos</a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" href="{% url 'agregar_avatar' %}">Agregar avatar</a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a>
+                    </li>
+                    </ul>
+                    </div>
+                    
                 {% else %}
                 <a class="btn btn-primary" href="{% url 'login' %}">Inicio sesión</a>
                 <a class="btn btn-primary" href="{% url 'registro' %}">Registro</a>
